[project]
name = "ioteravendserv"
version = "0.1.0"
description = ""
authors = [
    {name = "alygmi",email = "nurrusulialadiyat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
